# ibex-demo-system

./: .gitignore  README.md  ibex_demo_system.core  ibex_demo_system_core.core
data/: pins_artyz7.xdc  pins_pynqz2.xdc
rtl/fpga/: clkgen_pynqz2.sv  top_artyz7.sv  top_pynqz2.sv
rtl/system/: MAC.sv  accel_top.sv  and2.sv  and_gate.sv  and_top.sv  and_wrapper.sv  controller.sv  ibex_demo_system.sv  ibex_demo_system1.sv  lstm_layer.sv  lstm_unit.sv  quantization_fc.sv  quantization_lstm.sv  sigmoid_appro.sv  tanh_appr.sv  tanh_appr_16.sv  tanh_appro.sv
sw/c/common/: CMakeLists.txt  accel.c  accel.h  accelerator.h  and2.c  and2.h  demo_system.h  demo_system_regs.h  example.c  example.h
sw/c/demo/: CMakeLists.txt
sw/c/demo/hello_world/: CMakeLists.txt  main.c
sw/c/demo/lcd_st7735/: main.c
sw/c/demo/test_accel/: CMakeLists.txt  main.c
sw/c/demo/test_ip/: CMakeLists.txt  main.c
sw/common/: link.ld
util/: arty-z7-openocd-cfg.tcl  load_demo_system.sh  pynq-z2-openocd-cfg.tcl
